bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(productType@0) as productType, ENC_PT(reviewCount@1) as reviewCount]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(reviewCount@1) DESC, ENC_SORT(ENC_TF(ENC_PT(productType@0))) ASC], preserve_partitioning=[false], filter=[ENC_SORT(reviewCount@1) IS NULL OR ENC_SORT(reviewCount@1) > {type:4,numeric:10.0,bytes:3130} OR ENC_SORT(reviewCount@1) = {type:4,numeric:10.0,bytes:3130} AND (ENC_SORT(ENC_TF(ENC_PT(productType@0))) IS NULL OR ENC_SORT(ENC_TF(ENC_PT(productType@0))) < {type:2,numeric:,bytes:687474703a2f2f777777342e7769776973732e66752d6265726c696e2e64652f62697a65722f6273626d2f7630312f696e7374616e6365732f50726f64756374547970653130})]
    ProjectionExec: expr=[productType@0 as productType, INT64_AS_TERM(<uuid>@1) as reviewCount]
      AggregateExec: mode=Single, gby=[productType@0 as productType], aggr=[<uuid>]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@2, reviewer@0)], projection=[productType@0, review@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[productType@0, review@1, reviewer@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@1)], projection=[productType@0, review@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(producer@2, producer@0)], projection=[productType@0, product@1]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@0)], projection=[productType@0, product@1, producer@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productType@0, productType@1)], projection=[productType@0, product@1]
                    DataSourceExec: [GPOS] subject=?productType, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>
                    DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=?productType, additional_filters=[DynamicFilter [ Generation 2; productType in (<object id range>) ]]
                  DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>, object=?producer, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
                DataSourceExec: [GPOS] subject=?producer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>, object=<http://downlode.org/rdf/iso-3166/countries#AT>, additional_filters=[DynamicFilter [ Generation 2; producer in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, object=?product, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
            DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/stuff/rev#reviewer>, object=?reviewer, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
          DataSourceExec: [GPOS] subject=?reviewer, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>, object=<http://downlode.org/rdf/iso-3166/countries#US>, additional_filters=[DynamicFilter [ Generation 2; reviewer in (<object id range>) ]]
