bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[productType@0 as productType, ENC_PT(reviewCount@1) as reviewCount]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(reviewCount@1) DESC, AS_SORTABLE_BYTES(ENC_TF(productType@0)) ASC], preserve_partitioning=[false]
    DecodeObjectIdsExec: projections=[decode(productType) as productType, reviewCount]
      ProjectionExec: expr=[productType@0 as productType, <uuid>@1 as reviewCount]
        AggregateExec: mode=Single, gby=[productType@0 as productType], aggr=[<uuid>]
          ProjectionExec: expr=[productType__oid@0 as productType, product__oid@1 as product, producer__oid@2 as producer, review@3 as review, reviewer__oid@4 as reviewer]
            DecodeObjectIdsExec: projections=[productType__oid, product__oid, producer__oid, decode(review__oid) as review, reviewer__oid]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer__oid@4, reviewer__oid@0)], projection=[productType__oid@0, product__oid@1, producer__oid@2, review__oid@3, reviewer__oid@4]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review__oid@3, review__oid@0)], projection=[productType__oid@0, product__oid@1, producer__oid@2, review__oid@3, reviewer__oid@5]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@1, product__oid@1)], projection=[productType__oid@0, product__oid@1, producer__oid@2, review__oid@3]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(producer__oid@2, producer__oid@0)], projection=[productType__oid@0, product__oid@1, producer__oid@2]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@1, product__oid@0)], projection=[productType__oid@0, product__oid@1, producer__oid@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productType__oid@0, productType__oid@1)], projection=[productType__oid@0, product__oid@1]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?productType <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as productType__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 1615, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 1615 AND 1615 <= object_max@6, required_guarantees=[object in (1615), predicate in (1609)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?productType], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product__oid, object@3 as productType__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2, required_guarantees=[predicate in (1609)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?producer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as product__oid, object@3 as producer__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14904 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14904 AND 14904 <= predicate_max@2, required_guarantees=[predicate in (14904)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?producer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#AT>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as producer__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14903 AND object@3 = 16436 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14903 AND 14903 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 16436 AND 16436 <= object_max@6, required_guarantees=[object in (16436), predicate in (14903)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid, object@3 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84986 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84986 AND 84986 <= predicate_max@2, required_guarantees=[predicate in (84986)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review__oid, object@3 as reviewer__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84987 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84987 AND 84987 <= predicate_max@2, required_guarantees=[predicate in (84987)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as reviewer__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14903 AND object@3 = 15597 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14903 AND 14903 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 15597 AND 15597 <= object_max@6, required_guarantees=[object in (15597), predicate in (14903)]
