bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[productType@0 as productType, ENC_PT(reviewCount@1) as reviewCount]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(reviewCount@1) DESC, AS_SORTABLE_BYTES(ENC_TF(productType@0)) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[productType@0 as productType, <uuid>@1 as reviewCount]
      AggregateExec: mode=Single, gby=[productType@0 as productType], aggr=[<uuid>]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@2, reviewer@0)], projection=[productType@0, review@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[productType@0, review@1, reviewer@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@1)], projection=[productType@0, review@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(producer@2, producer@0)], projection=[productType@0, product@1]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@0)], projection=[productType@0, product@1, producer@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productType@0, productType@1)], projection=[productType@0, product@1]
                    ProjectionExec: expr=[subject@0 as productType]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType,data_type:,language_tag:}, projection=[subject@1]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?productType <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:})]
                    ProjectionExec: expr=[subject@0 as product, object@1 as productType]
                      FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:}, projection=[subject@1, object@3]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?productType], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} AND {term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www.w3.org/1999/02/22-rdf-syntax-ns#type,data_type:,language_tag:})]
                  ProjectionExec: expr=[subject@0 as product, object@1 as producer]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?producer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer,data_type:,language_tag:})]
                ProjectionExec: expr=[subject@0 as producer]
                  FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#AT,data_type:,language_tag:}, projection=[subject@1]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?producer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#AT>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#AT,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#AT,data_type:,language_tag:} AND {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#AT,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://downlode.org/rdf/iso-3166/countries#AT,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:})]
              ProjectionExec: expr=[subject@0 as review, object@1 as product]
                FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:})]
            ProjectionExec: expr=[subject@0 as review, object@1 as reviewer]
              FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/stuff/rev#reviewer,data_type:,language_tag:}, projection=[subject@1, object@3]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/stuff/rev#reviewer,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://purl.org/stuff/rev#reviewer,data_type:,language_tag:} AND {term_type:0,value:http://purl.org/stuff/rev#reviewer,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://purl.org/stuff/rev#reviewer,data_type:,language_tag:})]
          ProjectionExec: expr=[subject@0 as reviewer]
            FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}, projection=[subject@1]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND object@3 = {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:} <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:} AND {term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:} <= object_max@6, required_guarantees=[object in ({term_type:0,value:http://downlode.org/rdf/iso-3166/countries#US,data_type:,language_tag:}), predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country,data_type:,language_tag:})]
