bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(productType@0) as productType, ENC_PT(reviewCount@1) as reviewCount]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(reviewCount@1) DESC, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(productType@0))) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[productType@0 as productType, <uuid>@1 as reviewCount]
      AggregateExec: mode=Single, gby=[productType@0 as productType], aggr=[<uuid>]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@2, reviewer@0)], projection=[productType@0, review@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[productType@0, review@1, reviewer@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@1)], projection=[productType@0, review@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(producer@2, producer@0)], projection=[productType@0, product@1]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@0)], projection=[productType@0, product@1, producer@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productType@0, productType@1)], projection=[productType@0, product@1]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?productType <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as productType], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?productType], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as product, object@3 as productType], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?producer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as product, object@3 as producer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?producer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#AT>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as producer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND object@3 = <http://downlode.org/rdf/iso-3166/countries#AT> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://downlode.org/rdf/iso-3166/countries#AT> AND <http://downlode.org/rdf/iso-3166/countries#AT> <= object_max@6, required_guarantees=[object in (<http://downlode.org/rdf/iso-3166/countries#AT>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as reviewer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/stuff/rev#reviewer> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/stuff/rev#reviewer> AND <http://purl.org/stuff/rev#reviewer> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/stuff/rev#reviewer>)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as reviewer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND object@3 = <http://downlode.org/rdf/iso-3166/countries#US> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://downlode.org/rdf/iso-3166/countries#US> AND <http://downlode.org/rdf/iso-3166/countries#US> <= object_max@6, required_guarantees=[object in (<http://downlode.org/rdf/iso-3166/countries#US>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country>)]
