bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Execution Plan, object-id).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(productType@0) as productType, ENC_PT(reviewCount@1) as reviewCount]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(reviewCount@1) DESC, ENC_SORT(ENC_TF(ENC_PT(productType@0))) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[productType@0 as productType, <uuid>@1 as reviewCount]
      AggregateExec: mode=Single, gby=[productType@0 as productType], aggr=[<uuid>]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@2, reviewer@0)], projection=[productType@0, review@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[productType@0, review@1, reviewer@3]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@1)], projection=[productType@0, review@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(producer@2, producer@0)], projection=[productType@0, product@1]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@1, product@0)], projection=[productType@0, product@1, producer@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productType@0, productType@1)], projection=[productType@0, product@1]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?productType <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>], blank_node_mode=Variable
                    FilterExec: DynamicFilter [ empty ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?productType], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                  FilterExec: DynamicFilter [ empty ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?producer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                FilterExec: DynamicFilter [ empty ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?producer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#AT>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
            FilterExec: DynamicFilter [ empty ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
          FilterExec: DynamicFilter [ empty ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
