bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q1 (Optimized, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: productType, ENC_PT(reviewCount) AS reviewCount
  Sort: AS_SORTABLE_BYTES(reviewCount) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(productType)) ASC NULLS FIRST, fetch=10
    DecodeObjectIds: columns=[productType]
      Projection: productType, reviewCount
        Projection: productType, <uuid>, <uuid> AS reviewCount
          Aggregate: groupBy=[[productType AS productType]], aggr=[[COUNT(review) AS <uuid>]]
            BasicGraphPattern: columns_to_decode=[review], 
              QuadPattern: triple_pattern=[?productType <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/ProductType>]
              QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ?productType]
              QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?producer]
              QuadPattern: triple_pattern=[?producer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#AT>]
              QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product]
              QuadPattern: triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer]
              QuadPattern: triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>]
